...
        let mergedUserProperties = Track.mergeUserProperties(
            perCall: userProperties,
            defaultCustom: context.userCustomProperties,
            defaultConsent: context.userConsentProperties
        )

        var defaultProperties: InternalProperties = [:]
        defaultProperties += AutomaticProperties.defaultProperties
        defaultProperties += context.attributionDefaultProperties
        if let snapshot = context.mobileSnapshot {
            defaultProperties += snapshot.defaultProperties
        }

        let item: InternalProperties = [
            "event": name,
            "visitor_id": context.visitorId,
            "distinct_id": distinctId,
            "eventProperties": mergedEventProperties.isEmpty ? NSNull() : mergedEventProperties,
            "userProperties": mergedUserProperties ?? NSNull(),
            "defaultProperties": defaultProperties
        ]
        return item
...
